# self-calibrating-spatiallm

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: robustness_boundary.default.json
demo/: app.js  index.html  presets.json  styles.css
docs/: ablations.md  architecture.md  artifacts.md  demo_recording.md  environment.md  evaluation_pack.md  language_layer.md  pipeline.md  public_datasets.md  roadmap.md  robustness_boundary.md  spatiallm_integration.md
schemas/: ablation_report.schema.json  actionable_scene.schema.json  calibrated_point_cloud.schema.json  calibration_result.schema.json  evaluation_pack_manifest.schema.json  evaluation_pack_report.schema.json  evaluation_result.schema.json  language_scene_example.schema.json  point3d.schema.json  point_cloud_metadata.schema.json  point_cloud_sample.schema.json  repair_result.schema.json  robustness_boundary_config.schema.json  run_manifest.schema.json  scene_annotation.schema.json  scene_input_config.schema.json  scene_object.schema.json  scene_prediction.schema.json  scene_relation.schema.json
scripts/: bootstrap.sh  build_arkitscenes_manifest.py  build_language_dataset.py  check_environment.py  export_scene_prediction_language.py  run_eval_pack.py  run_failure_analysis.py  run_multi_scene.py  run_pipeline.py  run_post_true_v1_analysis.py  run_public_dataset_workflow.sh  run_robustness_boundary.py  run_true_v1_workflow.sh  serve_demo.py  setup_true_v1_env.sh  validate_public_dataset_manifest.py
tests/: conftest.py  test_imports.py
tools/: spatiallm_backend.py  spatiallm_wrapper.py
(+107 files in other folders)
